Commit from HashBrown CMS

--- a/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
+++ b/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
@@ -15,7 +15,7 @@ sections:
         text: "## Setting up a connection\n\nIn order to publish [Content](/docs/content/) and use [Templates](/docs/templates/) and [Media](/docs/media/), we need to set up a [Connection](/docs/connections).\n\n### Create it\n\n*   Click on the \"Connections\" tab\n*   Right click in the pane and select \"New connection\"\n\n![649a3c1fb3b6ffd338ad5f9db9b2b4b6367966e5](/media/649a3c1fb3b6ffd338ad5f9db9b2b4b6367966e5/guide-cms-create-connection.jpg)\n\n*   Name your connection something cool, we suggest \"Awesome Connection\"  \n*   Click the \"Save\" button in the bottom right\n\n### Configure it\n\nThere are a couple of options for connection types, but let's start with a [GitHub Pages](https://pages.github.com/) connection. If you're unfamiliar with GitHub Pages, it's an online service based on [Jekyll](http://jekyllrb.com/) that generates static sites rather than serving them actively. It's a huge money saver on hosting, because it's, well, free. Moving on:\n\n*   Download the [HashBrown GitHub Pages Boilerplate](https://github.com/Putaitu/hashbrown-boilerplate-github-pages/archive/latest.zip) and extract it somewhere.\n*   Go to it in your terminal and start the Jekyll server:\n\n~~~\ncd ./hashbrown-github-pages-boilerplate\njekyll serve\n~~~\n\n*   Back in the connection settings, pick the \"GitHub Pages\" connection type from the dropdown  \n*   Turn the \"Local\" switch on\n*   Type in the local path to the project (remember to end it with a \"/\")  \n\n![6d6fdbaea2d875a1528943722c2774ac0bebf94d](/media/6d6fdbaea2d875a1528943722c2774ac0bebf94d/guide-cms-configure-connection.jpg)\n\n*   Click \"Save\"\n\n### Set up providers\n\nIn order for us to use [Templates](/docs/templates/) and [Media](/docs/media/), select your newly created connection from the dropdowns in the top of the connections list.\n\n![21e8c39e707caa3731f54e9c77ec8c26e54ad75b](/media/21e8c39e707caa3731f54e9c77ec8c26e54ad75b/guide-cms-set-providers.jpg)\n"
     -
         template: richTextSection
-        text: "## Setting up a schema\n\nNow we are going to configure how our [Content](/docs/content/) behaves. This is done through a [Schema](/docs/schemas/).\n\n### Create it\n\n*   Go to the \"Schemas\" tab\n*   Expand the \"Content base\" schema\n*   Right click the \"Page\" schema and click \"New child schema\"\n\n### Configure main properties\n\n*   Pick a fancy name for your schema, like \"Awesome Page\"\n*   Pick a fancy icon to go with it\n*   Set the default tab to \"Content\", which is where our custom properties will be. You can create more tabs later.\n\n![0f249dbefa4425a5ed22beb77369d30cb507eaf2](/media/0f249dbefa4425a5ed22beb77369d30cb507eaf2/guide-cms-set-default-tab.jpg)\n\n### Configure field properties\n\n*   Type this into the \"field properties\" section:\n\n~~~\n{\n    \"template\": {\n        \"label\": \"Template\",\n        \"schemaId\": \"templateReference\",\n        \"config\": {\n            \"allowedTemplates\": [\"awesomePage\"]\n        }\n    },\n    \"text\": {\n        \"label\": \"Text\",\n        \"schemaId\": \"string\",\n        \"tabId\": \"content\"\n    }\n}\n~~~\n\n### Quick explanation\n\n*   The \"template\" and \"text\" keys are used to access the respective field values later on.\n*   The \"label\" is the key name the author sees in the CMS.\n*   The \"schemaId\" is the [Field Schema](/docs/schemas/fields)\n*   The \"tabId\" is the tab under which the field will appear\n*   The \"config\" is a configuration value applicable to some field schemas, in this case limiting the applicable page templates to the \"awesomePage\" template"
+        text: "## Setting up a schema\n\nNow we are going to configure how our [Content](/docs/content/) behaves. This is done through a [Schema](/docs/schemas/).\n\n### Create it\n\n*   Go to the \"Schemas\" tab\n*   Expand the \"Content base\" schema\n*   Right click the \"Page\" schema and click \"New child schema\"\n\n### Configure main properties\n\n*   Pick a fancy name for your schema, like \"Awesome Page\"\n*   Pick a fancy icon to go with it\n*   Set the default tab to \"Content\", which is where our custom properties will be. You can create more tabs later.\n\n![0f249dbefa4425a5ed22beb77369d30cb507eaf2](/media/0f249dbefa4425a5ed22beb77369d30cb507eaf2/guide-cms-set-default-tab.jpg)\n\n### Configure field properties\n\n*   Type this into the \"field properties\" section:\n\n~~~\n{\n    \"template\": {\n        \"label\": \"Template\",\n        \"schemaId\": \"templateReference\",\n        \"config\": {\n            \"allowedTemplates\": [\"awesomePage\"]\n        }\n    },\n    \"text\": {\n        \"label\": \"Text\",\n        \"schemaId\": \"string\",\n        \"tabId\": \"content\"\n    }\n}\n~~~\n\n### Quick explanation\n\n*   The \"template\" and \"text\" keys are used to access the respective field values later on.\n*   The \"label\" is the key name the author sees in the CMS.\n*   The \"schemaId\" is the [Field Schema](/docs/schemas/#field-schemas)\n*   The \"tabId\" is the tab under which the field will appear\n*   The \"config\" is a configuration value applicable to some field schemas, in this case limiting the applicable page templates to the \"awesomePage\" template"
     -
         template: richTextSection
         text: "## Creating the content  \n\nNow that we have set up the schema, we can create some [Content](/docs/content/) based on it.  \n\n- Go to the \"Content\" tab\n- Right click in the pane and select \"OK\"\n- Pick your schema and click \"Create\"\n- Right click the newly created content in the list and click \"Settings\"\n\n![83402adaed0cc36fa11cb2bfa0f2d9965b877bf2](/media/83402adaed0cc36fa11cb2bfa0f2d9965b877bf2/guide-cms-open-content-settings.jpg)\n\n- Switch on the connection you created under \"Publising\" and clik \"OK\"\n\n![32ef235ae421903411868f0ce5765cf7fa3fb8ba](/media/32ef235ae421903411868f0ce5765cf7fa3fb8ba/guide-cms-enable-connection.jpg)\n\n- Type in \"Hello World\" in the \"Title\" field\n- Type in \"Wear all the hats!\" (or your own catchphrase) in the \"Text\" field\n- Make sure the \"URL\" field reads \"/hello-world/\"\n- Click \"Save & publish\" \n- Visit [http://localhost:4000/hello-world/](http://localhost:4000/hello-world/) in your browser\n"
