Commit from HashBrown CMS

--- a/content/en/e8094798c9838b4a2dd0adc134a6775f95b5d252.md
+++ b/content/en/e8094798c9838b4a2dd0adc134a6775f95b5d252.md
@@ -14,7 +14,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Content and fields\n\nSchemas fall into 2 categories: [Content](/docs/content/) Schemas and field Schemas:  \n\n### Content schemas\n\nA [Content](/docs/content/) Schema will determine the fields in any [Content](/docs/content/) node based on this Schema\n\n### Field schemas\n\nA field Schema will determine which type of value the field is, like a string or a number. The native field types that come prepackaged with HashBrown are the following:  \n\n- Array\n- Boolean\n- Content Reference\n- Content Schema Reference\n- Date\n- Dropdown\n- Language\n- Media Reference\n- Resource Reference\n- Rich Text\n- String\n- Struct\n- Tags\n- Template Reference\n- Url"
+        text: "## Content and fields\n\nSchemas fall into 2 categories: [Content](/docs/content/) Schemas and field Schemas:  \n\n### Content schemas\n\nA [Content](/docs/content/) Schema will determine the fields in any [Content](/docs/content/) node based on this Schema\n\n### Field schemas\n\nA field Schema will determine which type of value the field is, like a string or a number. The native field types that come prepackaged with HashBrown are the following:  \n\n- Array\n- Boolean\n- Content Reference\n- Content Schema Reference\n- Date\n- Dropdown\n- Language\n- Media Reference\n- Number\n- Resource Reference\n- Rich Text\n- String (can use any type of HTML input, such as colour)\n- Struct\n- Tags\n- Template Reference\n- Url"
     -
         template: richTextSection
         includeGrandchildren: false
