Commit from HashBrown CMS

--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -7,6 +7,19 @@ sections:
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         text: "# Sync: Working locally with a remote instance\n\nAn apparent disadvantage of having the HashBrown CMS completely separated from the target website is that you can't easily work on the site locally. A feature in the settings panel called \"sync\" is here to amend that."
         theme: light
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Setting up a synchronised remote\n\nHooking this up is easier than you might think.\n\n*   Go to the \"Settings\" panel\n*   Click the \"Sync\" section\n*   Fill in the API address of your remote HashBrown instance\n*   Click \"Renew\" next to the \"API token\" field\n    *   Log in with your remote credentials\n    *   An API token should now have been generated\n*   Make sure the \"project and \"environment\" names are correct for you remote\n*   Pick the resources you want synchronised (Content, Schemes and/or Media)\n*   Click \"Save\""
+    -
+        template: buttons
+        includeGrandchildren: false
+        text: "## Voila!\n\nAfter the page reloads, your remote resources should show up in the navigation panel with a faded \"remote\" icon\_next to their names"
+        buttons:
+            -
+                text: 'More guides'
+                href: /guides/
+                target: _self
 meta:
     id: 5bd0de0803a611d57f91a45272bb49e5ba969c73
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
