--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -3,13 +3,17 @@ title: Guides
 sections:
     -
         template: banner
-        text: "# Guides\nLearn how to get along with HashBrown"
+        text: "# Guides\n\nLearn how to get along with HashBrown"
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         theme: dark
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Beginner\n- [Hello world](/guides/hello-world)\n- [Introduction to the dashboard](/guides/introduction-to-the-dashboard)\n- [Introduction to the CMS](/guides/introduction-to-the-cms)\n"
+        text: "## Beginner\n\n*   [Hello world](/guides/hello-world)\n*   [Introduction to the dashboard](/guides/introduction-to-the-dashboard)\n*   [Introduction to the CMS](/guides/introduction-to-the-cms)"
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Intermediate\n\n*   Synchronising HashBrown instances"
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
     parentId: ""
