Commit from HashBrown CMS

--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -1,11 +1,11 @@
 ---
-title: 'Sync: Working locally with a remote instance'
+title: 'Synchronising HashBrown projects'
 sections:
     -
         template: richTextSection
         includeGrandchildren: false
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: "# Sync: Working locally with a remote instance\n\nAn apparent disadvantage of having the HashBrown CMS completely separated from the target website is that you can't easily work on the site locally. A feature in the settings panel called \"sync\" is here to amend that."
+        text: "# Synchronising HashBrown projects\n\nThere are several good reasons to synchronise one project with another. The most common 2 scenarios are:\n\n*   Working locally on remote content\n\n*   Using one project as a baseline for another"
         theme: light
     -
         template: richTextSection
@@ -14,7 +14,7 @@ sections:
     -
         template: buttons
         includeGrandchildren: false
-        text: "## Voila!\n\nAfter the page reloads, your remote resources should show up in the navigation panel with a faded \"remote\" icon\_next to their names"
+        text: "## Voila!\n\nAfter the page reloads, your remote resources should show up in the navigation panel with a faded \"remote\" icon next to their names"
         buttons:
             -
                 text: 'More guides'
@@ -26,6 +26,6 @@ meta:
     language: en
 date: '2016-9-21'
 author: 'Putaitu Development'
-permalink: /guides/sync-working-locally-with-a-remote-instance/
+permalink: /guides/synchronising-hashbrown-projects/
 layout: sectionPage
 ---
