Commit from HashBrown CMS

--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -13,7 +13,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Intermediate\n\n*   Synchronising HashBrown instances"
+        text: "## Intermediate\n\n*   [Synchronising HashBrown projects](/guides/synchronising-hashbrown-projects/)"
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
     parentId: ""
