--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -10,11 +10,11 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Setting up a synchronised remote\n\nHooking this up is easier than you might think.\n\n*   Go to the \"Settings\" panel\n*   Click the \"Sync\" section\n*   Fill in the API address of your remote HashBrown instance\n*   Click \"Renew\" next to the \"API token\" field\n    *   Log in with your remote credentials\n    *   An API token should now have been generated\n*   Make sure the \"project and \"environment\" names are correct for you remote\n*   Pick the resources you want synchronised (Content, Schemes and/or Media)\n*   Click \"Save\""
+        text: "## Setting up a synchronised remote\n\nHooking this up is easier than you might think.\n\n*   Go to the \"Settings\" panel\n*   Click the \"Sync\" section\n*   Fill in the API address of your remote HashBrown instance\n*   Click \"Renew\" next to the \"API token\" field\n    *   Log in with your remote credentials\n    *   An API token should now have been generated\n*   Make sure the \"project and \"environment\" names are correct for you remote\n*   Pick the resources you want synchronised (Content, Schemes and/or Media)\n*   Click \"Save\"\n*   <span style=\"line-height: 20.8px;\">After the page reloads, your remote resources should show up in the navigation panel with a faded \"remote\" icon next to their names</span>"
     -
         template: buttons
         includeGrandchildren: false
-        text: "## Voila!\n\nAfter the page reloads, your remote resources should show up in the navigation panel with a faded \"remote\" icon next to their names"
+        text: "## Voila!\n\nThat's all there is to it."
         buttons:
             -
                 text: 'More guides'
