Commit from HashBrown CMS

--- a/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
+++ b/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
@@ -5,11 +5,8 @@ sections:
         template: banner
         includeGrandchildren: false
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: '# Introduction to the CMS'
+        text: "# Introduction to the CMS\n\n<span style=\"line-height: 20.8px;\">This is a quick overview of what you're seeing when you first open up the CMS. Some of these sections are \"scoped\", meaning that only certain users will have access to them.</span>"
         theme: dark
-    -
-        template: richTextSection
-        text: 'This is a quick overview of what you''re seeing when you first open up the CMS. Some of these sections are "scoped", meaning that only certain users will have access to them.'
     -
         template: richTextSection
         includeGrandchildren: false
@@ -21,11 +18,11 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Forms\n\nIf you need an input form on your website, you can create the model for it here and see a list of the user submitted input.\n"
+        text: "## Forms\n\nIf you need an input form on your website, you can create the model for it here and see a list of the user submitted input."
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Connections (scoped)\n\nA list of endpoints and resources for your content. Connections can be set up to publish your content to other servers, provide statically hosted media and serve rendering templates.\n"
+        text: "## Connections (scoped)\n\nA list of endpoints and resources for your content. Connections can be set up to publish your content to other servers, provide statically hosted media and serve rendering templates."
     -
         template: richTextSection
         includeGrandchildren: false
@@ -41,7 +38,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Main menu  \n\nThe main menu just has a few menu points:  \n- The user menu, for editing your info or logging out  \n- The dashboard link, for returning to the dashboard  \n- The language picker, if more then one language has been set up in the \"Settings\" pane"
+        text: "## Main menu\n\nThe main menu just has a few menu points:\n\n*   The user menu, for editing your info or logging out\n*   The dashboard link, for returning to the dashboard\n*   The language picker, if more then one language has been set up in the \"Settings\" pane"
 meta:
     id: 41003afd7b3d02a2434516a6243a71eab1d1a30f
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
