Commit from HashBrown CMS

--- a/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
+++ b/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
@@ -5,7 +5,7 @@ sections:
         template: banner
         text: "# Getting started with the HashBrown dashboard\n\nThis is a quick walthrough of the available features in the dashboard"
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        theme: light
+        theme: dark
     -
         template: richTextSection
         includeGrandchildren: false
