--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -5,8 +5,12 @@ sections:
         template: banner
         includeGrandchildren: false
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: "# Synchronising HashBrown projects\n\nThere are several good reasons to synchronise one project with another. The most common 2 scenarios are:\n\n*   Working locally on remote content\n\n*   Using one project as a baseline for another"
+        text: '# Synchronising HashBrown projects'
         theme: dark
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "There are several good reasons to synchronise one project with another. The most common 2 scenarios are:\n\n*   Working locally on remote content\n\n*   Using one project as a baseline for another"
     -
         template: richTextSection
         includeGrandchildren: false
