Commit from HashBrown CMS

--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -10,7 +10,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "There are several good reasons to synchronise one project with another. The most common 2 scenarios are:\n\n*   Working locally on remote content\n\n*   Using one project as a baseline for another"
+        text: "## Why synchronise?\n\nThere are several good reasons to synchronise one project with another. The most common 2 scenarios are:\n\n*   Working locally on remote content\n\n*   Using one project as a baseline for another"
     -
         template: richTextSection
         includeGrandchildren: false
