Commit from HashBrown CMS

--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -1,11 +1,11 @@
 ---
-title: 'Synchronising HashBrown projects'
+title: 'Synchronising projects'
 sections:
     -
         template: banner
         includeGrandchildren: false
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: '# Synchronising HashBrown projects'
+        text: '# Synchronising projects'
         theme: dark
     -
         template: richTextSection
@@ -30,6 +30,6 @@ meta:
     language: en
 date: '2016-9-21'
 author: 'Putaitu Development'
-permalink: /guides/synchronising-hashbrown-projects/
+permalink: /guides/synchronising-projects/
 layout: sectionPage
 ---
