--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -4,8 +4,8 @@ sections:
     -
         template: banner
         text: "# Connect your ideas\n\nCreate once. Publish anywhere.\n\n[Learn more](/features/)"
-        image: 38b72c0de9fe7d4924067dd7528bf1f8c54fa0d1
-        theme: light
+        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
+        theme: dark
     -
         template: buttons
         text: '## Getting started'
