Commit from HashBrown CMS

--- a/content/en/d526e23ef865b173d86bd1fc1907493e970b36e9.md
+++ b/content/en/d526e23ef865b173d86bd1fc1907493e970b36e9.md
@@ -1,6 +1,15 @@
 ---
 title: 'Email setup'
 description: 'How to set up email for HashBrown CMS'
+sections:
+    -
+        template: banner
+        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
+        text: "<h1>Email setup</h1>\n"
+        theme: dark
+    -
+        template: richTextSection
+        text: "<p>In order to invite new users to your HashBrown instance, you need to set up an email account to send the invitation emails from. HashBrown doesn&#39;t come with its own email server included, so a third party service, such as Google Mail, will be needed.  </p>\n<p>You only need to modify one file in HashBrown, it&#39;s located here:  </p>\n<pre><code>/config/mail.cfg\n</code></pre>"
 meta:
     id: d526e23ef865b173d86bd1fc1907493e970b36e9
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
