--- a/content/en/d526e23ef865b173d86bd1fc1907493e970b36e9.md
+++ b/content/en/d526e23ef865b173d86bd1fc1907493e970b36e9.md
@@ -9,7 +9,7 @@ sections:
         theme: dark
     -
         template: richTextSection
-        text: "<p>In order to invite new users to your HashBrown instance, you need to set up an email account to send the invitation emails from. HashBrown doesn&#39;t come with its own email server included, so a third party service, such as Google Mail, will be needed.</p>\n<p>You only need to modify one file in HashBrown, it&#39;s located here:</p>\n<pre><code>/config/mail.cfg\n</code></pre><p>The format of this file is as follows:</p>\n<pre><code>{\n    &quot;service&quot;: &quot;&quot;,        // The email service to use, e.g. gmail\n    &quot;user&quot;: &quot;&quot;,            // The username for the email account\n    &quot;clientId&quot;: &quot;&quot;,        // The client id for the email account\n    &quot;clientSecret&quot;: &quot;&quot;, // The client secret for the email account\n    &quot;refreshToken&quot;: &quot;&quot;, // The refresh token for the email account\n    &quot;accessToken&quot;: &quot;&quot;,    // The access token for the email account\n    &quot;displayName&quot;: &quot;&quot;,  // The name to print in the &quot;From&quot; field, e.g. HashBrown CMS\n    &quot;email&quot;: &quot;&quot;,        // The email to print in the &quot;From&quot; field, e.g. noreply@example.com\n    &quot;host&quot;: &quot;&quot;            // The location of the HashBrown CMS instance, e.g. hashbrown.example.com\n}\n</code></pre>"
+        text: "<p>In order to invite new users to your HashBrown instance, you need to set up an email account to send the invitation emails from. HashBrown doesn&#39;t come with its own email server included, so a third party service, such as Google Mail, will be needed.</p>\n<p>You only need to modify one file in HashBrown, it&#39;s located here:</p>\n<pre><code>/config/mail.cfg\n</code></pre><p>The format of this file is as follows:</p>\n<pre><code>{\n    &quot;service&quot;: &quot;&quot;,      // The email service to use, e.g. gmail\n    &quot;user&quot;: &quot;&quot;,         // The username for the email account\n    &quot;clientId&quot;: &quot;&quot;,        // The client id for the email account\n    &quot;clientSecret&quot;: &quot;&quot;, // The client secret for the email account\n    &quot;refreshToken&quot;: &quot;&quot;, // The refresh token for the email account\n    &quot;accessToken&quot;: &quot;&quot;,  // The access token for the email account\n    &quot;displayName&quot;: &quot;&quot;,  // The name to print in the &quot;From&quot; field, e.g. Example inc.\n    &quot;email&quot;: &quot;&quot;,        // The email to print in the &quot;From&quot; field, e.g. noreply@example.com\n    &quot;host&quot;: &quot;&quot;          // The location of the HashBrown CMS instance, e.g. hashbrown.example.com\n}\n</code></pre>"
 meta:
     id: d526e23ef865b173d86bd1fc1907493e970b36e9
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
