--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -13,7 +13,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Intermediate\n\n*   [Synchronising\_projects](/guides/synchronising-projects/)"
+        text: "<h2 id=\"intermediate\">Intermediate</h2>\n<ul>\n<li><a href=\"/guides/synchronising-projects/\">Synchronising projects</a></li>\n<li><a href=\"/guides/email-setup/\">Email setup</a></li>\n</ul>\n"
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
     parentId: ""
