Commit from HashBrown CMS

--- a/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
+++ b/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
@@ -3,7 +3,7 @@ title: 'Introduction to the dashboard'
 sections:
     -
         template: banner
-        text: "# Getting started with the HashBrown dashboard\n\nThis is a quick walthrough of the available features in the dashboard"
+        text: "<h1 id=\"introduction-to-the-dashboard\">Introduction to the dashboard</h1>\n<p>This is a quick walthrough of the available features in the dashboard</p>\n"
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         theme: dark
     -
@@ -18,6 +18,7 @@ sections:
         template: richTextSection
         includeGrandchildren: false
         text: "## For admins\n\nYou can create new projects, environments and backups with the \"+\" buttons and modify them with the \"...\" dropdown menus.\n\n### Backups\n\nTo access the backups dialog, click the \"...\" dropdown menu in the top right of a project and click \"backups\". You can then upload, create, restore, download or delete backups. An important thing to keep in mind is that all content on all environments will be replaced when restoring a backup, so it's always a good idea to create a new backup first, in case the changes are drastic.\n\nThe backup only restores settings, content and schemas to the project, it doesn't publish anything. You can republish the content tree in the project CMS."
+description: 'This is a quick walthrough of the available features in the dashboard'
 meta:
     id: 490cc8c9030417a77f649c8e525df788fc294b3a
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
