--- a/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
+++ b/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
@@ -39,6 +39,7 @@ sections:
         template: richTextSection
         includeGrandchildren: false
         text: "## Main menu\n\nThe main menu just has a few menu points:\n\n*   The user menu, for editing your info or logging out\n*   The dashboard link, for returning to the dashboard\n*   The language picker, if more then one language has been set up in the \"Settings\" pane"
+description: 'This is a quick overview of what you''re seeing when you first open up the CMS.'
 meta:
     id: 41003afd7b3d02a2434516a6243a71eab1d1a30f
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
