--- a/content/en/d526e23ef865b173d86bd1fc1907493e970b36e9.md
+++ b/content/en/d526e23ef865b173d86bd1fc1907493e970b36e9.md
@@ -1,11 +1,11 @@
 ---
 title: 'Email setup'
-description: 'How to set up email for HashBrown CMS'
+description: 'A guide for setting up HashBrown to send out emails'
 sections:
     -
         template: banner
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: "<h1>Email setup</h1>\n"
+        text: "<h1 id=\"email-setup\">Email setup</h1>\n<p>A guide for setting up HashBrown to send out emails</p>\n"
         theme: dark
     -
         template: richTextSection
