--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -5,7 +5,7 @@ sections:
         template: banner
         includeGrandchildren: false
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: '# Synchronising projects'
+        text: "<h1 id=\"synchronising-projects\">Synchronising projects</h1>\n<p>A guide for linking 2 HashBrown instances together</p>\n"
         theme: dark
     -
         template: richTextSection
@@ -24,6 +24,7 @@ sections:
                 text: 'More guides'
                 href: /guides/
                 target: _self
+description: 'A guide for linking 2 HashBrown instances together'
 meta:
     id: 5bd0de0803a611d57f91a45272bb49e5ba969c73
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
