Commit from HashBrown CMS

--- a/content/en/d526e23ef865b173d86bd1fc1907493e970b36e9.md
+++ b/content/en/d526e23ef865b173d86bd1fc1907493e970b36e9.md
@@ -5,7 +5,7 @@ sections:
     -
         template: banner
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: "<h1 id=\"email-setup\">Email setup</h1>\n<p>A guide for setting up HashBrown to send out emails</p>\n"
+        text: "<h1 id=\"email-setup\">Email setup</h1>\n\n\n<p>A guide for setting up HashBrown to send out emails</p>\n"
         theme: dark
     -
         template: richTextSection
