Commit from HashBrown CMS

--- a/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
+++ b/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
@@ -1,12 +1,7 @@
 ---
-title: 'Hello World'
+title: 'Hello world'
 description: 'Creating your first project'
 sections:
-    -
-        template: banner
-        text: "# Hello world\n\nCreating your first project"
-        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        theme: dark
     -
         template: richTextSection
         text: "## Creating a project\n\nFirst, we need to set up a project for us to work in.\n\n*   Make sure HashBrown is running, and that you're on the dashboard page at [http://localhost](http://localhost). If you don't know what that means, check out the [getting started](/getting-started/) page.\n*   Click the \"+\" button under the \"Projects\" heading\n\n![f96c9382f5b21ce9dc5fd1696eb7bfd41116054e](/media/f96c9382f5b21ce9dc5fd1696eb7bfd41116054e/guide-dashboard-create-project.jpg)\n\n*   Name it something astoundingly clever, like \"awesomeproject.com\"\n*   Click the \"CMS\" button in the \"live\" environment\n\n![9b808f49c681c1092a31703a6004c993cf036635](/media/9b808f49c681c1092a31703a6004c993cf036635/guide-dashboard-start-cms.jpg)"
