--- a/content/en/1d72ac4a3c7e348ef20717698eb87b82976bca36.md
+++ b/content/en/1d72ac4a3c7e348ef20717698eb87b82976bca36.md
@@ -2,13 +2,9 @@
 title: Docs
 sections:
     -
-        template: banner
-        text: "# Docs  \n\nThis is the documentation for the systems and terms used in HashBrown. If you're looking for the API documentation, it's [here](/api/)"
-        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        theme: dark
-    -
         template: childLinks
         includeGrandchildren: false
+description: 'This is the documentation for the systems and terms used in HashBrown'
 meta:
     id: 1d72ac4a3c7e348ef20717698eb87b82976bca36
     parentId: ""
