Commit from HashBrown CMS

--- a/content/en/e8094798c9838b4a2dd0adc134a6775f95b5d252.md
+++ b/content/en/e8094798c9838b4a2dd0adc134a6775f95b5d252.md
@@ -2,12 +2,6 @@
 title: Schemas
 sections:
     -
-        template: banner
-        includeGrandchildren: false
-        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: "# Schemas  \n\nThe building blocks of HashBrown"
-        theme: dark
-    -
         template: richTextSection
         includeGrandchildren: false
         text: "## Abstract  \n\nSchemas are structures for [Content](/docs/content/) to be based on. Without this structure, the [Content](/docs/content/) would have no way of knowing how to structurally present itself, or what should be editable in it. A Schema can for instance define that a [Content](/docs/content/) node should have a heading in the shape of a string, and a body in the shape of rich text. There are of course many more field types to choose from."
@@ -19,6 +13,7 @@ sections:
         template: richTextSection
         includeGrandchildren: false
         text: "## Inheritance  \n\nSchemas can inherit from one another, meaning that if a Schema is made a child of another Schema, it will inherit all of the parent's properties. If the same property is defined in the child and the parent Schema, the child properties are preferred."
+description: 'The building blocks of HashBrown'
 meta:
     id: e8094798c9838b4a2dd0adc134a6775f95b5d252
     parentId: 1d72ac4a3c7e348ef20717698eb87b82976bca36
