Commit from HashBrown CMS

--- a/content/en/3a77505e70cb1b4c3dcaf559b36897a3ff1d604d.md
+++ b/content/en/3a77505e70cb1b4c3dcaf559b36897a3ff1d604d.md
@@ -1,13 +1,7 @@
 ---
 title: Content
-description: ""
+description: 'The star of your website'
 sections:
-    -
-        template: banner
-        includeGrandchildren: false
-        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: "# Content  \n\nThe star of your website"
-        theme: dark
     -
         template: richTextSection
         includeGrandchildren: false
