--- a/content/en/c1dd2e6f02010be4e85db1ba1fae620c77f6d58e.md
+++ b/content/en/c1dd2e6f02010be4e85db1ba1fae620c77f6d58e.md
@@ -2,15 +2,10 @@
 title: Templates
 sections:
     -
-        template: banner
-        includeGrandchildren: false
-        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: "# Templates  \n\nThe presenters of your authored content"
-        theme: dark
-    -
         template: richTextSection
         includeGrandchildren: false
         text: "## External resources\n\nTemplates, like [Media](/docs/media/), are external resources, meaning that they are provided through [Connections](/docs/connections/). The templates are hosted on your remote website, and are only accessible to HashBrown as a list of names that can be picked from dropdown menus."
+description: 'The presenters of your authored content'
 meta:
     id: c1dd2e6f02010be4e85db1ba1fae620c77f6d58e
     parentId: 1d72ac4a3c7e348ef20717698eb87b82976bca36
