Commit from HashBrown CMS

--- a/content/en/107d81c18660aa9b8706bf9f72da6aea920b9867.md
+++ b/content/en/107d81c18660aa9b8706bf9f72da6aea920b9867.md
@@ -2,12 +2,6 @@
 title: Media
 sections:
     -
-        template: banner
-        includeGrandchildren: false
-        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        text: "# Media  \n\nNobody reads anymore, anyway"
-        theme: dark
-    -
         template: richTextSection
         includeGrandchildren: false
         text: "## External resource  \n\nMedia files are, like [Templates](/docs/templates/) hosted externally. This means they are provided to HashBrown through a [Connection](/docs/connections/)."
@@ -15,6 +9,7 @@ sections:
         template: richTextSection
         includeGrandchildren: false
         text: "## Internal structure  \n\nAlthough they are provided externally, Media files can be ordered into a hierarchy which is maintained within HashBrown. This does not change the structure of the files on your remote Media hosting service, it is just for your own organisational purposes."
+description: 'Nobody reads anymore, anyway'
 meta:
     id: 107d81c18660aa9b8706bf9f72da6aea920b9867
     parentId: 1d72ac4a3c7e348ef20717698eb87b82976bca36
