--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -32,6 +32,6 @@ meta:
     language: en
 date: '2016-9-5'
 author: 'Putaitu Development'
-permalink: /connect-your-ideas/
+permalink: /
 layout: sectionPage
 ---
