--- a/content/en/ede50899922d67bffcc62b3997840f149c695823.md
+++ b/content/en/ede50899922d67bffcc62b3997840f149c695823.md
@@ -4,7 +4,7 @@ description: 'A guide on server config, for instance how to set up a custom port
 sections:
     -
         template: richTextSection
-        text: ""
+        text: "<h2 id=\"the-config-file\">The config file</h2>\n<p>The config file for the server is located here:</p>\n<pre><code>/config/server.cfg\n</code></pre><p>To start HashBrown on another port then 80, use this config:</p>\n<pre><code>{\n    &quot;port&quot;: 8080\n}\n</code></pre>"
 meta:
     id: ede50899922d67bffcc62b3997840f149c695823
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
