Commit from HashBrown CMS

--- a/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
+++ b/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
@@ -13,22 +13,10 @@ sections:
         text: "## Get the node.js dependencies  \n\nAs with most node.js apps, there are couple dependencies to get before you can fire up HashBrown. Go into your installation directory and pull them from NPM:\n\n~~~\ncd ./hashbrown-cms\nnpm install\n~~~\n"
     -
         template: richTextSection
-        text: "## Create your user account  \n\nThere needs to be at least one admin user:\n\n~~~\nnode hashbrown.js create-user u=username p=password admin=true\n~~~"
+        text: "<h2 id=\"run-it\">Run it</h2>\n<p>Run HashBrown and visit localhost to see it in action.</p>\n<pre><code>sudo node hashbrown.js\n</code></pre><p>If you don&#39;t want to run as admin, you can <a href=\"/guides/configuring-the-server/\">use another port than 80</a></p>\n"
     -
         template: richTextSection
-        text: "## Run it  \n\nRun HashBrown as superuser and visit [http://localhost](http://localhost) to see it in action.\n\n~~~\nsudo node hashbrown.js\n~~~"
-    -
-        template: buttons
-        text: "## Done!\nHashBrown should now be up and running.  \nCheck out the guides to dive in."
-        buttons:
-            -
-                text: 'Hello world'
-                href: /guides/hello-world/
-                target: _self
-            -
-                text: 'All guides'
-                href: /guides/
-                target: _self
+        text: "<h2 id=\"run-it\">Run it</h2>\n<p>Run HashBrown and visit localhost to see it in action.</p>\n<pre><code>sudo node hashbrown.js\n</code></pre><p>If you don&#39;t want to run as admin, you can <a href=\"/guides/configuring-the-server/\">use another port than 80</a></p>\n"
 meta:
     id: efbd77b7728265a8cce1981981a3ec4f93195595
     parentId: ""
