Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -11,8 +11,8 @@ sections:
                 target: _self
         links:
             -
-                text: Source
-                href: 'https://github.com/Putaitu/hashbrown-cms/releases/latest'
+                text: Questions
+                href: 'https://www.reddit.com/r/HashBrownCMS/'
                 target: _blank
             -
                 text: Guides
