--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -23,15 +23,53 @@ sections:
                 href: /docs/
                 target: _self
     -
-        template: richTextSection
-        text: "## Why HashBrown?\n\n### Remote management\n\nSeparate your concerns with a truly modern approach to content management. Your websites won't know what hit them.\n\n### Multiple projects at once\n\nWhy worry about several CMS'es, when you only need one?\n\n### Several environments for each project\n\nWe get it. You need to test your content before you go live.\n\n### Multilingual\n\nRemember the last time you used a truly elegant localisation solution in a CMS? We don't either.\n\n### Plugin support\n\nIf your needs aren't met at the core level, you can add anything you can imagine.\n\n### Content format consistency\n\nWhen you are passing complex, format-agnostic data around, document databases are the way to go. HashBrown knows what's up.\n\n### Painless backups\n\nHashBrown has your back in seconds.\n\n### Small footprint\n\nYou could probably run HashBrown on your toaster at home."
+        heading: 'Separate your concerns'
+        subheading: 'HashBrown CMS has a truly modern approach to content management.'
+        features:
+            -
+                icon: fa-cubes
+                heading: Modular
+                body: "<p>Strings, numbers and&nbsp;booleans are the basic building blocks for any site, but the fun really starts when you&#39;re building with arrays, structs, date pickers, media references, tags and&nbsp;dropdowns. HashBrown comes with 16 built-in field types, and gives you the power to combine them any way you please.</p>\n"
+            -
+                icon: ' fa-share-alt '
+                heading: Connectable
+                body: "<p>HashBrown won&#39;t tell you how to do your job. It is and always will be exclusively a content management system, and not a rendering&nbsp;engine. This means you can plug it into any web solution you want, whether you&#39;re running GoLang, PHP, Node.js, .NET, Ruby or Python on your end doesn&#39;t matter to HashBrown at all. You are free to develop with your preferred tools at all times.</p>\n"
+            -
+                icon: fa-lock
+                heading: Secure
+                body: "<p>By storing your website&#39;s content separately from the site itself, you are not only making it hard for attackers to bring down your site, you are also rendering the effort completely pointless. There is simply no database on your website from which to steal information and hold ransom.&nbsp;You can secure HashBrown behind a VPN and still have a publicly accessible site, consisting of statically generated HTML.&nbsp;</p>\n"
+            -
+                icon: fa-sitemap
+                heading: Multitasking
+                body: "<p>If you&#39;ve ever found yourself running multiple&nbsp;copies of your CMS for development, staging and production environments, dumping and restoring databases to migrate content between them, and pulling your hair out over how tedious and error prone&nbsp;that is, look no further.&nbsp;HashBrown is built from the ground up as a multi-site, multi-environment system.</p>\n"
+            -
+                icon: fa-leaf
+                heading: Lightweight
+                body: "<p>Despite being a very sophisticated machine, HashBrown could run on your toaster. <span>As HashBrown only needs resources when you&#39;re changing your website&#39;s content, it&#39;s mostly idle.</span>&nbsp;This makes it the cheapest CMS for hosting purposes, as well as enables you to run it on that Raspberry Pi you&#39;ve been neglecting.&nbsp;</p>\n"
+            -
+                icon: fa-heart
+                heading: 'Free and open source'
+                body: "<p>There are no&nbsp;fees, binary blobs, restrictive policies&nbsp;or asterisks.&nbsp;<span>This software belongs to you just as much as it belongs to us. You are free to distribute and&nbsp;hack HashBrown&nbsp;to your heart&#39;s content, and you are most welcome to share your ideas with us. Head on over&nbsp;to&nbsp;our <a href=\"https://github.com/Putaitu/hashbrown-cms\" target=\"_blank\">GitHub repository </a>to take part&nbsp;in the fun.</span></p>\n"
+            -
+                icon: fa-flag
+                heading: Multilingual
+                body: "<p>With built-in support for languages, you can easily create a multilingual and multicultural website. There is no need for you to create your content trees multiple times for every language, nor is there a need for you to pay any particular attention to it when you create your fields. A simple &quot;multilingual&quot; switch is all you need, and you&#39;re good to go.</p>\n"
+            -
+                icon: fa-plug
+                heading: Pluggable
+                body: "<p>Even though HashBrown is already a very flexible system out of the box, you may want to increase the flexibility even further to suit your needs. You may also want to add your own connection type, to allow publishing of your content to some obscure front-end that you wrote 15 years ago. It&#39;s all possible through the power of plugins.</p>\n"
+            -
+                icon: fa-database
+                heading: Consistent
+                body: "<p>HashBrown is built on Node.js,&nbsp;<span>sharing data models with the client side code. MongoDB is used to store site data, as a document database most accurately reflects the content of a complex website. This means that the content is always format consistent, and&nbsp;there is no incompatible serialisation and deserialisation happening between client and server.</span></p>\n"
+        template: featureGroup
 description: 'Create once. Publish anywhere.'
 meta:
     id: 91f1ec2b984f291377c2dc488be2ebbefb46dd9a
     parentId: ""
     language: en
 date: '2016-9-5'
-author: 'Putaitu Development'
+author: Unknown
 permalink: /
 layout: sectionPage
 ---
