--- a/content/en/65134decc72fa5adec880cb0e0484ae8e4213838.md
+++ b/content/en/65134decc72fa5adec880cb0e0484ae8e4213838.md
@@ -3,7 +3,7 @@ title: Features
 sections:
     -
         template: richTextSection
-        text: "## Remote management\n\nThis is where HashBrown is very different from other CMS'es. Instead of hosting your site, taking up valuable server power caching and crunching numbers for every visitor, it connects to your site remotely and updates a content cache on your site, only when changes are made to the site's content. This means you can build your site in whatever language and framework you like, you can even use a static site generator service like [GitHub Pages](http://github.com/pages) and host your content managed site for free.\n\n## Multiple projects at once\n\nOne instance of HashBrown can manage the content of several sites/apps. How many it can manage is determined by the capacity of the server it's running on.\n\n## Several environments for each project\n\nEvery project has its own unlimited amount of environments. This is very useful if you want testing content separated from live content, or if you for any other reason want to branch your managed content into subsets.\n\n## Multilingual\n\nLanguage support is built into the core, no extra precautions needed when creating custom schemas.\n\n## Plugin support\n\nHashBrown comes prebundled with a few example plugins, mainly to show you how easy it is to write one of your own. So even if you need to manage content for a system that only you are using (maybe it's completely custom), HashBrown can adapt to it.\n\n## Content format consistency\n\nThe backend of HashBrown uses MongoDB for data storage and JSON for serialisation, so at no point will you have to deal with relational database content being serialised and deserialised into and from XML and other non-analogous formats, potentially losing data in the process.\n\n## Painless backups\n\nBacking up and restoring content in document-based databases has always been a snap when compared to the more traditional approaches, and it shines through in HashBrown.\n\n## Small footprint\n\nClunky Windows servers are a dying breed in the server space, and with good reason. HashBrown can run on a small virtual machine on services like [DigitalOcean](http://digitalocean.com) and thereby cost a lot less to host.\n\n## Is and always will be free and open source\n\nThe HashBrown software will never cost you anything, contain binary blobs or in any other way hide its inner workings."
+        text: "<iframe src=\"https://docs.google.com/presentation/d/1ZejnRdV_djN4av9O8j-PigYeJIdYdAMyosrydliGepI/embed?start=false&loop=false&delayms=10000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>\n\n<h2 id=\"remote-management\">Remote management</h2>\n\n<p>This is where HashBrown is very different from other CMS&#39;es. Instead of hosting your site, taking up valuable server power caching and crunching numbers for every visitor, it connects to your site remotely and updates a content cache on your site, only when changes are made to the site&#39;s content. This means you can build your site in whatever language and framework you like, you can even use a static site generator service like <a href=\"http://github.com/pages\">GitHub Pages</a> and host your content managed site for free.</p>\n\n<h2 id=\"multiple-projects-at-once\">Multiple projects at once</h2>\n\n<p>One instance of HashBrown can manage the content of several sites/apps. How many it can manage is determined by the capacity of the server it&#39;s running on.</p>\n\n<h2 id=\"several-environments-for-each-project\">Several environments for each project</h2>\n\n<p>Every project has its own unlimited amount of environments. This is very useful if you want testing content separated from live content, or if you for any other reason want to branch your managed content into subsets.</p>\n\n<h2 id=\"multilingual\">Multilingual</h2>\n\n<p>Language support is built into the core, no extra precautions needed when creating custom schemas.</p>\n\n<h2 id=\"plugin-support\">Plugin support</h2>\n\n<p>HashBrown comes prebundled with a few example plugins, mainly to show you how easy it is to write one of your own. So even if you need to manage content for a system that only you are using (maybe it&#39;s completely custom), HashBrown can adapt to it.</p>\n\n<h2 id=\"content-format-consistency\">Content format consistency</h2>\n\n<p>The backend of HashBrown uses MongoDB for data storage and JSON for serialisation, so at no point will you have to deal with relational database content being serialised and deserialised into and from XML and other non-analogous formats, potentially losing data in the process.</p>\n\n<h2 id=\"painless-backups\">Painless backups</h2>\n\n<p>Backing up and restoring content in document-based databases has always been a snap when compared to the more traditional approaches, and it shines through in HashBrown.</p>\n\n<h2 id=\"small-footprint\">Small footprint</h2>\n\n<p>Clunky Windows servers are a dying breed in the server space, and with good reason. HashBrown can run on a small virtual machine on services like <a href=\"http://digitalocean.com\">DigitalOcean</a> and thereby cost a lot less to host.</p>\n\n<h2 id=\"is-and-always-will-be-free-and-open-source\">Is and always will be free and open source</h2>\n\n<p>The HashBrown software will never cost you anything, contain binary blobs or in any other way hide its inner workings.</p>\n"
 description: 'All the reasons you would probably love HashBrown'
 meta:
     id: 65134decc72fa5adec880cb0e0484ae8e4213838
