--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -4,7 +4,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Beginner\n\n*   [Hello world](/guides/hello-world)\n*   [Introduction to the dashboard](/guides/introduction-to-the-dashboard)\n*   [Introduction to the CMS](/guides/introduction-to-the-cms)"
+        text: "<h2 id=\"beginner\">Beginner</h2>\n<ul>\n<li><a href=\"/guides/hello-world\">Hello world</a></li>\n<li><a href=\"/guides/introduction-to-the-dashboard\">Introduction to the dashboard</a></li>\n<li><a href=\"/guides/introduction-to-the-cms\">Introduction to the CMS</a></li>\n<li><a href=\"/guides/start-a-nodejs-site\">Starting a node.js site</a></li>\n<li><a href=\"/guides/start-a-github-pages-site\">Starting a GitHub Pages site</a></li>\n</ul>\n"
     -
         template: richTextSection
         includeGrandchildren: false
