Commit from HashBrown CMS

--- a/content/en/f3fc48a7ce760ce56e322553f4b8f8ca858ceb26.md
+++ b/content/en/f3fc48a7ce760ce56e322553f4b8f8ca858ceb26.md
@@ -8,6 +8,6 @@ meta:
     language: en
 date: '2017-8-6'
 author: 'Putaitu Development'
-permalink: /whoops/
+permalink: /404/
 layout: sectionPage
 ---
