--- a/content/en/50206727b65fd2aab0e801e81407420ecd516042.md
+++ b/content/en/50206727b65fd2aab0e801e81407420ecd516042.md
@@ -4,7 +4,7 @@ description: 'Creating a site using HashBrown and node.js'
 sections:
     -
         template: richTextSection
-        text: "<h2 id=\"prerequisites\">Prerequisites</h2>\n<p>For this guide, we&#39;ll be using express and the <a href=\"https://github.com/Putaitu/hashbrown-cms/tree/node-driver\">HashBrown node.js driver</a></p>\n<pre><code>$ npm install --save express hashbrown-driver body-parser pug\n</code></pre><p>We need the <code>body-parser</code> package to allow pushing content changes, as they are consumed via a REST API.<br>In this example, we&#39;re using <code>pug</code> for templating, but that&#39;s up to you.</p>\n<p>We also need to create our template folders:</p>\n<pre><code>$ mkdir views\n$ mkdir views/pages\n$ mkdir views/partials\n</code></pre><h2 id=\"server\">Server</h2>\n<p>A quick server setup like this will work:</p>\n<pre><code class=\"lang-javascript\">&#39;use strict&#39;;\n\nconst Path = require(&#39;path&#39;);\nconst Express = require(&#39;express&#39;);\nconst HashBrown = require(&#39;hashbrown-driver&#39;);\nconst BodyParser = require(&#39;body-parser&#39;);\n\nconst PORT = 8000;\nconst APP_ROOT = Path.resolve(__dirname);\n\n// Express\nlet app = Express();\napp.use(BodyParser.json({limit: &#39;50mb&#39;}));\napp.use(BodyParser.urlencoded({extended: true}));\napp.use(Express.static(APP_ROOT + &#39;/public&#39;));\napp.use(&#39;/media&#39;, Express.static(APP_ROOT + &#39;/hashbrown/storage/media&#39;));\napp.set(&#39;view engine&#39;, &#39;pug&#39;);\napp.set(&#39;views&#39;, APP_ROOT + &#39;/views/pages&#39;);\n\n// HashBrown driver\nHashBrown.init(app);\n\n// Routes\napp.get(&#39;*&#39;, (req, res) =&gt; {\n    HashBrown.content.getByUrl(req.originalUrl)\n    .then((content) =&gt; {\n        res.render(content.template, content);\n    })\n    .catch((e) =&gt; {\n        res.status(404).send(e.message);\n    });\n});\n\n// Start server\nlet server = app.listen(PORT, &#39;0.0.0.0&#39;);\n</code></pre>\n"
+        text: "<p>Use the a official <a href=\"https://github.com/Putaitu/hashbrown-node-driver\">HashBrown node driver</a> and check out the <a href=\"https://github.com/Putaitu/hashbrown-node-driver/tree/example\">example project</a></p>\n"
 meta:
     id: 50206727b65fd2aab0e801e81407420ecd516042
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
