Commit from HashBrown CMS

--- a/content/en/50206727b65fd2aab0e801e81407420ecd516042.md
+++ b/content/en/50206727b65fd2aab0e801e81407420ecd516042.md
@@ -4,7 +4,7 @@ description: 'Creating a site using HashBrown and node.js'
 sections:
     -
         template: richTextSection
-        text: "<p>Use the a official <a href=\"https://github.com/Putaitu/hashbrown-node-driver\">HashBrown node driver</a> and check out the <a href=\"https://github.com/Putaitu/hashbrown-node-driver/tree/example\">example project</a></p>\n"
+        text: "<p>Please use the official <a href=\"https://github.com/Putaitu/hashbrown-node-driver\">HashBrown node driver</a> and check out the <a href=\"https://github.com/Putaitu/hashbrown-node-driver/tree/example\">example project</a></p>\n"
 meta:
     id: 50206727b65fd2aab0e801e81407420ecd516042
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
