Commit from HashBrown CMS

--- a/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
+++ b/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
@@ -13,7 +13,7 @@ sections:
         text: "## Get the node.js dependencies  \n\nAs with most node.js apps, there are couple dependencies to get before you can fire up HashBrown. Go into your installation directory and pull them from NPM:\n\n~~~\ncd ./hashbrown-cms\nnpm install\n~~~\n"
     -
         template: richTextSection
-        text: "<p>&nbsp;</p>\n\n<h2 id=\"run-it\">Run it</h2>\n\n<p>Run HashBrown and visit localhost to see it in action.</p>\n\n<pre>\n<code>node hashbrown.js\n</code></pre>\n\n<p>If you don&#39;t want to run as admin, you can <a href=\"/guides/configuring-the-server/\">use a&nbsp;port other than 80</a></p>\n"
+        text: "<p>&nbsp;</p>\n\n<h2 id=\"run-it\">Run it</h2>\n\n<p>Run HashBrown and visit <a href=\"http://localhost:8080\">http://localhost:8080 </a>to see it in action.</p>\n\n<pre>\n<code>node hashbrown.js</code>\n</pre>\n"
 meta:
     id: efbd77b7728265a8cce1981981a3ec4f93195595
     parentId: ""
