--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -4,11 +4,11 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "<h2 id=\"beginner\">Beginner</h2>\n<ul>\n<li><a href=\"/guides/hello-world\">Hello world</a></li>\n<li><a href=\"/guides/introduction-to-the-dashboard\">Introduction to the dashboard</a></li>\n<li><a href=\"/guides/introduction-to-the-cms\">Introduction to the CMS</a></li>\n<li><a href=\"/guides/starting-a-nodejs-site\">Starting a node.js site</a></li>\n<li><a href=\"/guides/starting-a-github-pages-site\">Starting a GitHub Pages site</a></li>\n</ul>\n"
+        text: "<p>&nbsp;</p>\n\n<h2 id=\"beginner\">Beginner</h2>\n\n<ul>\n\t<li><a href=\"/guides/introduction-to-the-dashboard\">Introduction to the dashboard</a></li>\n\t<li><a href=\"/guides/introduction-to-the-cms\">Introduction to the CMS</a></li>\n\t<li><a href=\"/guides/starting-a-nodejs-site\">Starting a node.js site</a></li>\n\t<li><a href=\"/guides/starting-a-github-pages-site\">Starting a GitHub Pages site</a></li>\n</ul>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "<h2 id=\"intermediate\">Intermediate</h2>\n<ul>\n<li><a href=\"/guides/synchronising-projects/\">Synchronising projects</a></li>\n<li><a href=\"/guides/email-setup/\">Email setup</a></li>\n<li><a href=\"/guides/https-setup/\">HTTPS setup</a></li>\n<li><a href=\"/guides/configuring-github-for-oauth-tokens/\">Configuring GitHub for OAuth tokens setup</a></li>\n</ul>\n"
+        text: "<p>&nbsp;</p>\n\n<h2 id=\"intermediate\">Intermediate</h2>\n\n<ul>\n\t<li><a href=\"/guides/synchronising-projects/\">Synchronising projects</a></li>\n\t<li><a href=\"/guides/email-setup/\">Email setup</a></li>\n\t<li><a href=\"/guides/https-setup/\">HTTPS setup</a></li>\n\t<li><a href=\"/guides/configuring-github-for-oauth-tokens/\">Configuring GitHub for OAuth tokens setup</a></li>\n</ul>\n"
 description: 'Learn how to get along with HashBrown'
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
