Commit from HashBrown CMS

--- a/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
+++ b/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
@@ -10,7 +10,7 @@ sections:
         text: "## Download the source  \n\n### Download .zip\nYou can always pick up the latest HashBrown code [here](https://github.com/Putaitu/hashbrown-cms/archive/stable.zip).\n\n### Download with  GIT\nIf you'd rather stay up to date with GIT, just clone the 'stable' branch:  \n\n~~~\ngit clone https://github.com/Putaitu/hashbrown-cms.git -b stable --single-branch\n~~~"
     -
         template: richTextSection
-        text: "## Get the node.js dependencies  \n\nAs with most node.js apps, there are couple dependencies to get before you can fire up HashBrown. Go into your installation directory and pull them from NPM:\n\n~~~\ncd ./hashbrown-cms\nnpm install\n~~~\n"
+        text: "<h2 id=\"get-the-node-js-dependencies\">Get the node.js dependencies</h2>\n\n<p>There are a couple dependencies to get before you can fire up HashBrown. Go into your installation directory and pull them from NPM:</p>\n\n<pre>\n<code>cd ./hashbrown-cms\nnpm install\n</code></pre>\n"
     -
         template: richTextSection
         text: "<p>&nbsp;</p>\n\n<h2 id=\"run-it\">Run it</h2>\n\n<p>Run HashBrown and visit <a href=\"http://localhost:8080\">http://localhost:8080 </a>to see it in action.</p>\n\n<pre>\n<code>node hashbrown.js</code>\n</pre>\n"
