Commit from HashBrown CMS

--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -8,7 +8,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Setting up a synchronised remote\n\nHooking this up is easier than you might think.\n\n*   Go to the \"Settings\" panel\n*   Click the \"Sync\" section\n*   Fill in the API address of your remote HashBrown instance\n*   Click \"Renew\" next to the \"API token\" field\n    *   Log in with your remote credentials\n    *   An API token should now have been generated\n*   Make sure the \"project and \"environment\" names are correct for your remote project\n*   Pick the resources you want synchronised (Content, Schemes and/or Media)\n*   Click \"Save\"\n*   <span style=\"line-height: 20.8px;\">After the page reloads, your remote resources should show up in the navigation sidebar with a faded \"remote\" icon next to their names</span>"
+        text: "<h2 id=\"setting-up-a-synchronised-remote\">Setting up a synchronised remote</h2>\n\n<p>Hooking this up is easier than you might think.</p>\n\n<ul>\n\t<li>In the dashboard, click a project menu and select &quot;sync&quot;</li>\n\t<li>Fill in the API address of your remote HashBrown instance</li>\n\t<li>Save your settings</li>\n\t<li>Click &quot;Renew&quot; next to the &quot;API token&quot; field\n\t<ul>\n\t\t<li>Log in with your remote credentials</li>\n\t\t<li>An API token should now have been generated</li>\n\t</ul>\n\t</li>\n\t<li>Make sure the &quot;project&quot; name&nbsp;is correct for your remote project</li>\n\t<li>Save your settings again</li>\n\t<li><span>When you enter an environment, your remote resources should show up in the navigation sidebar with a faded &quot;remote&quot; icon next to their names</span></li>\n</ul>\n"
     -
         template: buttons
         includeGrandchildren: false
